remove flag