@@ -34,6 +34,7 @@
         <source>11</source>
         <target>11</target>
         <compilerArgs>
+          <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
           <arg>--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
           <arg>--add-exports=jdk.jfr/jdk.jfr.internal=ALL-UNNAMED</arg>
           <arg>--add-exports=jdk.jfr/jdk.jfr.internal.jfc=ALL-UNNAMED</arg>
